# ai-fitness-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INTERVIEW_DOCUMENT.md  README.md  ROADMAP.md  build_log.txt  build_log_2.txt  build_log_3.txt  fitness_ai_chat_skeleton.html  index.html  jest.config.cjs  local_records.json  metadata.json  package-lock.json  package.json  resume-vibecoding.md  server.ts  server.ts.legacy  vite.config.ts
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  graph.py  llm.py  schemas.py  state.py
backend/app/agent/bridges/: base.py  router.py  (+5 more)
backend/app/api/: analysis.py  chat.py  dictionary.py  memory.py  plans.py  records.py  sessions.py  uploads.py
backend/app/models/: __init__.py  chat.py  episodic.py  memory.py  planning.py  procedural.py  session.py
backend/app/observability/: fitness_tracing.py
backend/app/services/: __init__.py  context_budget.py  db.py  episodic_memory.py  insight_engine.py  memory.py  nutrition_api_service.py  nutrition_service.py  procedural_memory.py  semantic_distiller.py  session_manager.py  training_analytics.py  working_memory.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_analysis.py  test_api.py  test_bridges.py  test_context_budget.py  test_db.py  test_episodic_memory.py  test_fitness_tool_registry.py  test_memory.py  test_observability.py  test_procedural_memory.py  test_safety_guard.py  test_semantic_distiller.py  test_session_manager.py  test_working_memory.py  test_workout_plan_executor.py
(+99 files in other folders)
